# MHY_Scanner-macOS

./: .env.local  .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
docs/: BUILDING.md  DEVELOPMENT.md
scripts/: build_mac_vcpkg.sh  check_deps.sh  package_dmg.sh  update_version.sh
src/Core/: CMakeLists.txt
src/Core/Common/: Common.h  Constants.h  Types.h
src/Core/Config/: ConfigManager.cpp  ConfigManager.h
src/Core/Network/: HttpClient.cpp  HttpClient.h
src/Core/Network/Api/: BilibiliApi.hpp  LiveStreamApi.cpp  LiveStreamApi.h  MihoyoApi.hpp
src/Core/SDK/: MihoyoSDK.cpp  MihoyoSDK.h
src/Core/Scanner/: GPUCopyHelper.h  GPUCopyHelper.mm  QRScanner.h  QRScanner.mm  ScannerBase.hpp  UnifiedFrameBuffer.h  UnifiedFrameBuffer.mm  UnifiedScanner.h  UnifiedScanner.mm  VisionProcessor.h  VisionProcessor.mm
src/Core/Scanner/ScreenCapture/: ScreenCapture.h  ScreenCapture.mm  ScreenCaptureKitWrapper.h  ScreenCaptureKitWrapper.mm
src/Core/Utils/: CookieParser.hpp  CryptoUtils.cpp  StringUtil.hpp
src/Resources/: Info.plist
src/UI/: CMakeLists.txt  Main.cpp
src/UI/About/: AboutDialog.cpp  AboutDialog.h
src/UI/Login/: BiliLoginTab.cpp  BiliLoginTab.h  CookieLoginTab.cpp  CookieLoginTab.h  LoginDialog.cpp  LoginDialog.h  LoginTab.cpp  LoginTab.h  QrCodeLoginTab.cpp  QrCodeLoginTab.h  SmsLoginTab.cpp  SmsLoginTab.h
src/UI/Main/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/UI/ScanThreads/: ScreenScanThread.cpp  ScreenScanThread.h  StreamScanThread.h  StreamScanThread.mm
src/UI/Widgets/: DraggableTableWidget.h  StyleManager.cpp  StyleManager.h
